Bug 83481 - EDITING: Incorrect syntax for external references with Excel A1 or R1C1 formula syntax
Summary: EDITING: Incorrect syntax for external references with Excel A1 or R1C1 formu...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: Other All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: target:4.4.0 target:4.3.2
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-04 08:14 UTC by Laurent Balland
Modified: 2014-09-05 15:54 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2014-09-04 08:14:07 UTC
Bug description: it is not possible to build correct external reference with XL A1 or XL R1C1 formula syntax

Step to reproduce:
1. Create a new spreadsheet
2. Select Tools > Options > LibreOffice Calc > Formula: Formula syntax="Excel R1C1" or "Excel A1"
3. Start a formula with =
4. Open an existing spreadsheet
5. Select a cell
6. Return to the new spreadsheet

Observed behavior:
Reference is: 'file:///C:/<path to file>/test.xls'#Feuil1!R[4]C[1]
=> result is #NAME?

Expected behavior:
Syntax should be: ['file:///C:/<path to file>/test.xls']Feuil1!R[4]C[1]
and result should be the content of the cell
Comment 1 Commit Notification 2014-09-05 11:28:57 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=645bccf7a5b91d794d387286deca583ea41f3516

fdo#83481 Correct syntax for external references with all formula syntax



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2014-09-05 13:55:34 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5cb685d9e248f810e00a0a8617ebb04dcb7a5334

parseExternalDocName() also for ConventionXL_A1::parseAnyToken(), fdo#83481



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2014-09-05 15:54:22 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=10817252c56f48b0026158fc37a55005098a9d78&h=libreoffice-4-3

fdo#83481 Correct syntax for external references with all formula syntax


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.