fdo#83481 Correct syntax for external references with all formula syntax

Reviewed-on: https://gerrit.libreoffice.org/11286
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
(cherry picked from commit 645bccf7a5b91d794d387286deca583ea41f3516)
Signed-off-by: Eike Rathke <erack@redhat.com>

parseExternalDocName() also for ConventionXL_A1::parseAnyToken(), fdo#83481

to make 645bccf7a5b91d794d387286deca583ea41f3516 actually work for both,
ExcelA1 and ExcelR1C1 address conventions.

(cherry picked from commit 5cb685d9e248f810e00a0a8617ebb04dcb7a5334)

Change-Id: I99ea9f026b95d36f6335414c46f332f5ba7cf235
Reviewed-on: https://gerrit.libreoffice.org/11300
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>